--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,19 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0<3.0.0"
+  sdk: ">=2.8.0<3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^0.1.2
+  animated_text_kit: ^2.5.4
+  firebase_core: ^0.5.2+1
+  firebase_auth: ^0.18.3+1
+  modal_progress_hud: ^0.1.3
+  cloud_firestore: ^0.14.3+1
+
 
 dev_dependencies:
   flutter_test:
